# Firstone

./: BUILD  Dockerfile.dapper  Jenkinsfile  README.md  WORKSPACE  config-managment.yaml  config_test.go  dbservice.yaml  deps.bzl  go.mod  go.sum  index.html  main.go  nats.yaml  sonar-coverage.sh  sonar-project.properties  test.java
.github/workflows/: first.yml
cms/: Chart.yaml  values.yaml
cms/templates/: _helpers.tpl  deployment.yaml  ingress.yaml  ingressroute.yaml  service.yaml
config/dns/: BUILD.bazel  dns.go
config/record/: BUILD.bazel  record.go
deploy/sampleChart/: Chart.yaml  values.yaml
deploy/sampleChart/templates/: NOTES.txt  deployment.yaml  hpa.yaml  ingress.yaml
deploy/sampleChart/templates/tests/: test-connection.yaml
deployments/: app-deployment.yml  test-deployment.yml
src/: BUILD.bazel  dns.pm  dns.yang  file.yang  hello.py  parser.go  publisher.go  record.yang
terraform/: main.tf  terraform.tfvars  versions.tf
tests/: Dockerfile  README.md  app-deployment.sh  app.py  requirements.txt
tests/resources/: cluster-setup.sh  test-component.sh  test-deployment.sh  test-deployment.yaml
tests/test/: sample-test.py
vars/: config
