load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "dns",
    srcs = ["dns.go"],
    importpath = "github.com/SophosNSG/paloma-config-service/config/dns",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_openconfig_goyang//pkg/yang",
        "@com_github_openconfig_ygot//ygot",
        "@com_github_openconfig_ygot//ytypes",
    ],
)
